@@ -7,6 +7,8 @@ plugins {
     alias(libs.plugins.composeCompiler)
 }
 
+val afmVersionName: String by rootProject.extra
+
 kotlin {
     jvmToolchain(25)
     compilerOptions {
@@ -26,11 +28,16 @@ dependencies {
 compose.desktop {
     application {
         mainClass = "com.abysl.afm.MainKt"
+        jvmArgs("--enable-native-access=ALL-UNNAMED")
 
         nativeDistributions {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
             packageName = "com.abysl.afm"
-            packageVersion = "1.0.0"
+            packageVersion = afmVersionName
+            modules("java.se", "jdk.unsupported", "jdk.crypto.cryptoki", "jdk.localedata", "jdk.charsets", "jdk.zipfs")
+            linux {
+                packageName = "afm"
+            }
         }
     }
 }
